--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ django-storages==1.11.1
 gunicorn==20.1.0
 jmespath==0.10.0
 Pillow==8.3.2
+psycopg2==2.9.3
+psycopg2-binary==2.9.3
 python-dateutil==2.8.2
 pytz==2021.1
 s3transfer==0.5.0
